--- a/src/style/less/main.less
+++ b/src/style/less/main.less
@@ -19,12 +19,6 @@ body,html{
 	display: block;
 
 }
-.wrapper{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  margin: 0;
-}
 .row{
 	display: flex;
 	flex-direction: row;
@@ -32,62 +26,131 @@ body,html{
 	margin: 0;
 }
 #mainView{
-	max-width: calc(100% - 46px);
+	margin: 0 auto;
+	display: flex;
+	flex-direction: column;
+	margin-top: 88px;
 }
 .mainNav
 {
-	position: fixed;
+	display: flex;
+	flex-direction: column;
+	padding-top: 3px;
+	padding-bottom: 3px;
+	font-size: calc(10px + 5vw);
+	font-weight: bold;
+	max-width: 100%;
+
+	height: auto;
+	width: 100%;
+  position: fixed;
   z-index: 1;
   top: 0;
-  right: 0;
+  left: 0;
+  background-color: #09091a;
+  overflow-x: hidden;
 
 	a{
 		text-decoration: none;
-		display: flex;
-	  flex-direction: column;
-	  justify-content: center;
+		color: #cfb53b ;
 	}
 
 	a:hover, .selected{
 		color: #fff;
 	}
+	.header{
+	display: flex;
+	justify-content: space-between;
+	padding: 0px 20px;
+		.container {
+			display: inline-block;
+			cursor: pointer;
+		}
+		.wrapper{
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			max-width: 200px;
+		}
 
+		.bar1, .bar2, .bar3 {
+			width: 35px;
+			height: 5px;
+			background-color: #cfb53b ;
+			margin: 6px 0;
+			transition: 0.4s;
+		}
+
+		.change .bar1 {
+			-webkit-transform: rotate(-45deg) translate(-9px, 6px);
+			transform: rotate(-45deg) translate(-9px, 6px);
+		}
+
+		.change .bar2 {opacity: 0;}
+
+		.change .bar3 {
+			-webkit-transform: rotate(45deg) translate(-8px, -8px);
+			transform: rotate(45deg) translate(-8px, -8px);
+		}
+
+	}
+
+	#title{
+		margin: 20px 0;
+		font-family: 'Courier Prime', monospace;
+	}
+	.titleContainer{
+		display: flex;
+		flex-direction: column;
+	}
+	.titleContainer{
+		margin: 0 auto;
+	  display: flex;
+	  flex-direction: column;
+	  width: 100%;
+	}
+	.titleContainer a{
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+	}
 	.options {
 		margin: 0 auto;
 		background: red;
 		width: 100%;
 		padding-top: 20px;
 		height: 100vh;
-		.tooltiptext{
-			visibility: hidden;
-		  width: 120px;
-		  background-color: black;
-		  color: #fff;
-		  text-align: center;
-		  border-radius: 6px;
-		  padding: 5px 0;
+		display: none;
 
-		  /* Position the tooltip */
-		  position: relative;
-		  z-index: 1;
-		  bottom: -25px;
-		  right: 126px;
-			:hover{
 
-			}
-		}
-		a:hover .tooltiptext{
-			 visibility: visible;
-		}
-		&-bottom{
-			padding-top: 30vh;
-		}
 	}
 }
+.showOptions {
+	height: 100%;
+	position: fixed;
+	.options{
+		display: flex;
+		flex-direction: column;
+		flex: 1;
+		text-align: left;
+	}
+	footer{
+		display: flex;
+		width: 55%;
+		margin: 0 auto;
+	}
+}
+
 .selectedNav{
 	color: #fff !important;
 }
 
+.ComponentContainer{
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+
+}
 #logoContainer {
     width: 45px;
     height: 45px;
@@ -124,104 +187,102 @@ icon{
   cursor: pointer;
 }
 
-//task manager style
-.tasks{
-	width: 75%;
+//pages
+.section{
+	width: 100%;
+	padding-top: 5%;
+	padding-bottom: 5%;
+	display: flex;
+	justify-content: center;
+}
+.column{
+	&-1{
+		width: 94%;
+		background: yellow;
+	}
+	&-2{
+		width: 45.5%;
+	}
+	&-3{
+		width: 29.33%;
+	}
+}
+form{
+	padding: 5px 12px;
+}
+.buttonGroup{
+	input{
+		margin-left: 12px;
+	}
+}
+.textInput{
+	background: #fff;
+  border: 1px solid #dfe1e5;
+  box-shadow: none;
+  border-radius: 18px;
+  z-index: 3;
+  height: 28px;
+  margin: 8px 4px;
+  width: 182px;
+  max-width: 199px;
+	&:hover{
+		box-shadow: 0 1px 6px rgb(32 33 36 / 28%);
+    border-color: rgba(223,225,229,0);
+	}
+}
+
+.brew-setting{
+	background: pink;
 	display: flex;
 	justify-content: space-evenly;
-}
-.task{
-	&-page-content{
-		display: flex;
-	}
-	&-preview{
-		width: 25%;
-		.administrative{
-			color:  @adwa-purple;
-		}
-		.communication{
-			color:  @adwa-yellow;
-		}
-		.development{
-			color:  @adwa-red;
-		}
-		.teaching{
-			color:  @adwa-green;
-		}
-
-	}
-	border: 1px solid #eee;
-  width: 24%;
-
-	&-item-listed{
-	  margin: 2px;
-		margin-bottom: 7px;
-	  background-color: #f5f5f5;
-	  border-radius: 12px;
-		overflow: hidden;
-		&:hover, &:active, &:focus{
-			outline: none;
-			border: 2px solid gray;
-		}
-		p.id{
-			margin: 0 auto;
-		  text-align: center;
-			color: white;
-		}
-		.administrative{
-			background: @adwa-purple;
-		}
-		.communication{
-			background: @adwa-yellow;
-		}
-		.development{
-			background: @adwa-red;
-		}
-		.teaching{
-			background: @adwa-green;
-		}
-		p.title{
-			padding: 8px 15px;
-		}
-	}
-	&-selected{
-		p.title{
-			font-size: 17px;
-		  font-weight: bold;
-		  text-decoration: underline;
-		}
-		p.date, p.by{
-			margin: 0 auto;
-		  font-size: 12px;
-		  color: #666;
-		}
-		p.disc{
-			margin-top: 10px;
-		}
-	}
+	flex-wrap: wrap;
+	padding:15px;
 	h2{
-		border-bottom: 2px solid #eee;
-		padding: 8px 15px;
-	  margin: 2px;
+		width: 100%;
+		padding-left: 3%;
+		margin-top: 3px;
 	}
-
+	h3{
+		margin: 5px 0px;
+	}
+	h4{
+		margin: 3px 0px;
+	}
+	p{
+		margin: 2px 2px;
+	}
+	.column-3{
+		display: flex;
+		flex-direction: column;
+	}
 }
-
-//pages
-.page{
-	display: flex;
-
-	&-sub-navigation{
-		flex: 250px 0 0;
-    padding: 35px 6px 6px 6px;
-		&-top, &-bottom{
-			height: 25vh;
-	    display: flex;
-	    flex-direction: column;
-	    justify-content: center;
-	    background: red;
-			border-radius: 12px;
-    	margin: 12px;
+.brew{
+	&-attempt{
+		padding: 8px 4px;
+		p{
+			margin: 0px;
+      font-size: 12px;
+		}
+		.wrapper{
+			display: flex;
+			justify-content: space-evenly;
+		}
+		.textInput{
+			width: 91px;
+		}
+		&-score{
+			margin: 2%;
+	  	height: 500px;
+  		border: 1px solid black;
+		}
+	}
+	&-attempts{
+		.row{
+			display: flex;
+			justify-content: space-evenly;
+		}
+		.column-5{
+			width: 15.25%;
 		}
 	}
 }
